--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "highlight.js": "^11.8.0",
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.475.0",
